<resources>
    <string name="app_name">PDF Downloader</string>
    <string name="action_settings">Settings</string>
    <string name="welcome1">Welcome to PDF Downloader! </string>
    <string name="starttype">START SERVICE</string>
    <string name="close">close app</string>
    <string name="title_activity_start_activity">Start Service</string>
    <string name="pdf1">PDF-1</string>
    <string name="pdf2">PDF-2</string>
    <string name="pdf3">PDF-3</string>
    <string name="pdf4">PDF-4</string>
    <string name="pdf5">PDF-5</string>
    <string name="PDF1">https://www.cisco.com/web/about/ac79/docs/innov/IoE.pdf</string>
    <string name="PDF2">http://www.cisco.com/web/about/ac79/docs/innov/IoE_Economy.pdf</string>
    <string name="PDF3">http://www.cisco.com/web/strategy/docs/gov/everything-for-cities.pdf</string>
    <string name="PDF4">http://www.cisco.com/web/offer/gist_ty2_asset/Cisco_2014_ASR.pdf</string>
    <string name="PDF5">http://www.cisco.com/web/offer/emear/38586/images/Presentations/P3.pdf</string>
    <string name="download">Download</string>
    <string name="welcome2">Enter URLs </string>
</resources>
