<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.kritikagopalakrishnan.downloader.start_activity"
    tools:showIn="@layout/activity_start_activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome2"
        android:id="@+id/welcome2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="#f7710661"
        android:textStyle="bold"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pdf1"
        android:id="@+id/pdf1"
        android:textColor="#f7710661"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/welcome2"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pdf2"
        android:id="@+id/pdf2"
        android:layout_marginTop="49dp"
        android:layout_below="@+id/pdf1"
        android:layout_alignParentStart="true"
        android:textColor="#f7710661"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pdf3"
        android:id="@+id/pdf3"
        android:layout_below="@+id/pdf2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="52dp"
        android:textColor="#f7710661"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pdf4"
        android:id="@+id/pdf4"
        android:layout_below="@+id/pdf3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="54dp"
        android:textColor="#f7710661"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pdf5"
        android:id="@+id/pdf5"
        android:layout_below="@+id/pdf4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="56dp"
        android:textColor="#f7710661"
        android:textStyle="bold"
        android:textSize="15sp" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/PDF1"
        android:id="@+id/editText"
        android:layout_above="@+id/pdf2"
        android:layout_alignEnd="@+id/welcome2"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:textIsSelectable="false"
        android:editable="true"
        android:inputType="text"
        android:singleLine="true" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_above="@+id/pdf3"
        android:layout_alignParentEnd="true"
        android:editable="true"
        android:textIsSelectable="false"
        android:text="@string/PDF2"
        android:singleLine="true" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:text="@string/PDF3"
        android:layout_above="@+id/pdf4"
        android:layout_alignParentEnd="true"
        android:textIsSelectable="false"
        android:editable="true"
        android:singleLine="true" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:text="@string/PDF4"
        android:id="@+id/editText4"
        android:layout_above="@+id/pdf5"
        android:layout_alignEnd="@+id/editText3"
        android:editable="true"
        android:textIsSelectable="false"
        android:singleLine="true" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText5"
        android:text="@string/PDF5"
        android:layout_alignBottom="@+id/pdf5"
        android:layout_alignParentEnd="true"
        android:textIsSelectable="false"
        android:editable="true"
        android:singleLine="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:text="@string/download"
        android:id="@+id/download"
        android:background="#f7710661"
        android:textColor="#fbf9f9"
        android:textStyle="bold"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="buttonstartservice" />

</RelativeLayout>
